  84.   [bug]       jinmei, jerry
	This is a quick fix patch for the issue: AXFR fails half the 
	time because of connection problems. xfrout client will make
	a new connection every time. (Trac #299, svn r2697)

  83.	[build]*
	The configure --with-boost-lib option is removed. It was not
	used since the build included ASIO. (svn r2684)

  82.	[func]		jinmei
	bin/auth: Added -u option to allow the effective process user
	of the authoritative server after invocation.  The same option to
	the boss process will be propagated to b10-auth, too.
	(Trac #268, svn r2675)

  81.	[func]		jinmei
	Added a C++ framework for micro benchmark tests.  A supplemental
	library functions to build query data for the tests were also
	provided. (Trac #241, svn r2664)

  80.	[bug]		jelte
	bindctl no longer accepts configuration changes for unknown or
	non-running modules (for the latter, this is until we have a
	way to verify those options, at which point it'll be allowed
	again).
	(Trac #99, r2657)

  79.	[func]		feng, jinmei
	Refactored the ASIO link interfaces to move incoming XFR and
	NOTIFY processing to the auth server class.  Wrapper classes for
	ASIO specific concepts were also provided, so that other BIND 10
	modules can (eventually) use the interface without including the
	ASIO header file directly.  On top of these changes, AXFR and
	NOTIFY processing was massively improved in terms of message
	validation and protocol conformance.  Detailed tests were provided
	to confirm the behavior.
	Note: Right now, NOTIFY doesn't actually trigger subsequent zone
	transfer due to security reasons. (Trac #221, r2565)

  78.	[bug]		jinmei
	lib/dns: Fixed miscellaneous bugs in the base32 (hex) and hex
	(base16) implementation, including incorrect padding handling,
	parser failure in decoding with a SunStudio build, missing
	validation on the length of encoded hex string.  Test cases were
	more detailed to identify these bugs and confirm the fix.  Also