@@ -1,3 +1,5 @@
+bind10-devel-20100812 released on August 12, 2010
+
   84.   [bug]       jinmei, jerry
 	This is a quick fix patch for the issue: AXFR fails half the 
 	time because of connection problems. xfrout client will make
